--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,11 +1,21 @@
 .sidebar {
   width: 300px;
   min-width: 300px;
-  background: var(--primary-color);
   min-height: 100vh;
   box-sizing: border-box;
   position: relative;
   color: #fff;
+  background: #42275a; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #734b6d,
+    #42275a
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #734b6d,
+    #42275a
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .sidebar-content {
   position: fixed;
@@ -13,6 +23,7 @@
 }
 .sidebar .user {
   font-weight: bold;
+  font-size: 1.5rem;
   text-align: center;
   letter-spacing: 1px;
   padding: 40px 30px;
@@ -51,4 +62,8 @@
   width: 70px;
   height: 70px;
   border: 3px solid #fff;
+}
+
+.sidebar li {
+  font-size: 1.2rem;
 }
