--- a/src/index.css
+++ b/src/index.css
@@ -40,14 +40,14 @@ ul {
   background: #fff;
   padding: 8px 12px;
   border-radius: 4px;
-  color: var(--primary-color);
+
   cursor: pointer;
   font-size: 1em;
-  border: 1px solid var(--primary-color);
+  border: 1px solid;
 }
 .btn:hover {
   color: #fff;
-  background-color: var(--primary-color);
+  background-color: rgba(94, 94, 168, 0.507);
 }
 
 /* forms */
