--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -14,6 +14,7 @@
 .project-filter button {
   background: transparent;
   border: 0;
+  padding: 0 10px;
   font-family: inherit;
   font-weight: bold;
   color: var(--text-color);
