--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,21 +1,21 @@
-.navbar {
+.Nav {
   width: 100%;
   padding: 30px 0;
   box-sizing: border-box;
   margin-bottom: 80px;
 }
-.navbar ul {
+.Nav ul {
   display: flex;
   margin: 0 auto;
   align-items: center;
   justify-content: flex-end;
 }
 
-.navbar li {
+.Nav li {
   font-size: 1.5rem;
 }
 
-.navbar .logo {
+.Nav .logo {
   font-weight: bold;
   color: var(--heading-color);
   letter-spacing: 1px;
@@ -23,13 +23,13 @@
   align-items: center;
   margin-right: auto;
 }
-.navbar .logo img {
+.Nav .logo img {
   margin-right: 10px;
   filter: invert(25%);
   width: 36px;
   margin-top: -8px;
 }
-.navbar a {
+.Nav a {
   color: #333;
   text-decoration: none;
   margin-right: 20px;
